# hisabclub-finance

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE-UPDATE.md  ARCHITECTURE.md  Makefile  README.md  deep-bubbling-fiddle.md  docker-compose.llm.yml  docker-compose.yml  knowledge.md  local-llm-changes-plan.md  new-plan.md  start-llm.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fc6f5ad6d91_initial_schema.py  15c31c4bdeba_add_connected_accounts_table.py  70380c4c415c_add_insights_tables.py  9f3d1b2c7a01_add_document_artifacts_and_transaction_nature.py  a4b5c6d7e8f9_add_phase2_foundation_models.py  a9c4e2d1b7f0_add_durable_jobs_and_support_tables.py  add_extraction_audit_columns.py  b1d2e3f4a5b6_enable_row_level_security_tenant_isolation.py  b2c3d4e5f6a7_add_balance_snapshots_and_product_views.py  c2d3e4f5a6b7_force_row_level_security.py  c3d9e1a2b7f4_add_password_reset_tokens_table.py  c4d5e6f7a8b9_add_transaction_split_lineage.py  d4e5f6a7b8c9_harden_app_db_role_disable_superuser_bypass.py  dd80917cce50_add_raw_sms_table.py  e1f2a3b4c5d6_create_runtime_rls_role_and_grants.py  e6f7a8b9c0d1_add_document_knowledge_chunks_table.py  f2b9d3c4a1e7_add_fingerprints_transfer_matches_and_parse_status_checks.py  f9a0b1c2d3e4_add_phase2_quality_controls_and_review_tasks.py  phase35_tax_line_items.py  phase3_nullable_review_statement.py  (+1 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/scripts/: import_folder_for_user.py  import_tax_folder_dummy.py
backend/tests/: conftest.py
(+390 files in other folders)
