[project]
name = "hisabclub"
version = "0.1.0"
description = "Privacy-first Indian personal finance ledger"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # Auth
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    # PDF parsing
    "pikepdf>=9.4.0",
    "pdfplumber>=0.11.0",
    # Settings & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "httpx>=0.28.0",
    # Gmail integration
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
ocr = [
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
